# web-analyzer

./: .coveragerc  .gitignore  Dockerfile  README.md  bulk_process.py  manage.py  process.sh  pyproject.toml  run.py
.github/workflows/: main.yml
app/: __init__.py  config.py
app/api/: __init__.py  errors.py  user.py
app/api/v1/: __init__.py  routes.py
app/jobs/: process_csv.py
app/models/: models.py
app/scripts/: bulk.py  comprehend.py  handler.py  metafire.py  scrape.py  script.py  spotify.py
app/templates/: base.html  index.html
migrations/: env.py
migrations/versions/: 644fd5404cf7_.py  855d2521d9b4_.py
tests/: tests.py
