[tool.poetry]
name = "web-analyzer"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.8.6"
flask = "^2.2"
flask-cors = "^3.0"
flask-script = "^2.0"
flask-restx = "^1.0"
flask-migrate = "^4.0"
flask-sqlalchemy = "^3.0"
psycopg2-binary = "2.8.6"  # 2.9 does not seem to be supported by AWS Lambda
zappa = "^0.56"
bs4 = "^0.0"
thefuzz = {version = "^0.19", extras = ["speedup"]}

[tool.poetry.dev-dependencies]
python-dotenv = "^0.21"
flake8 = "^6.0"
coverage = "^7.0"
black = "^22.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
